assets/css/scrumboard.css
/* ... */
      .card.ui-sortable-helper .task-header svg.feather-user {
        color: #fff; }
      .card.ui-sortable-helper .card-body .task-body .task-bottom div.tb-section-1 {
        color: #fff; }
        .card.ui-sortable-helper .card-body .task-body .task-bottom div.tb-section-1 svg {
          color: #fff; }
      .card.ui-sortable-helper .card-body .task-body .task-bottom div.tb-section-2 svg {
        color: #fff; }
      .card.ui-sortable-helper .card-body .task-content .progress {
        box-shadow: none; }
  
  /*
      img task
  */
  /*
      task-text-progress
  */
  /*
      Style On events
  */
  /* On Drag Task */
  .ui-state-highlight {
    position: relative;
    border-color: var(--main-accent-color);
    height: 141px;
    margin-bottom: 36px;
    border-radius: 15px;
    border: 1px dashed var(--main-accent-color);
    background-image: linear-gradient(45deg, rgba(27, 85, 226, 0.09) 25%, transparent 25%, transparent 50%, rgba(27, 85, 226, 0.09) 50%, rgba(27, 85, 226, 0.09) 75%, transparent 75%, transparent);
    background-size: 1rem 1rem;
    -webkit-animation: progress-bar-stripes 1s linear infinite;
    animation: progress-bar-stripes 1s linear infinite; }
    .ui-state-highlight:before {
      content: 'Drop';
      position: absolute;
      left: 41%;
      font-size: 19px;
      color: var(--main-accent-color);
      top: 50%;
      margin-top: -16px;
      font-weight: 600; }
  
  .connect-sorting-content {
    min-height: 80px; }
  
  @keyframes progress-bar-stripes {
    0% {
      background-position: 1rem 0; }
    100% {
      background-position: 0 0; } }

/* STYLES ADDED EXTRA */
.w-form-style {
  font-weight: normal !important;
  font-size: 13px !important;
  padding-left: 20px !important;
}
.w-typo-style{
  font-size: 10px;
  font-weight: 700;
  color: #3b3f5c;
  margin-bottom: 8px;
}

.w-utility-btn{
  padding: 0 !important;
  background-color: white;
  box-shadow: none !important;
  border: none;
}

.w-utility-space:last-child {
  margin-bottom: 150px !important;
}

.w-utility-rounded-btn {
  width: fit-content;
  padding: 8px 20px !important;
  border-radius: 100px !important;
  border: 1px solid var(--main-accent-color);
  font-weight: bold !important;
}

.position-sticky {
  position: sticky;
  bottom: 20px;
  width: fit-content;
  margin-left: auto;
  margin-right: 10px;
}


.w-utility-rounded-btn > svg {
  margin-right: 1px;
  vertical-align: middle !important;
}

.w-utility-center-div {
  display: flex !important;
  flex-direction: column;
  align-items: center;
}

.w-util-ul {
  list-style: none;
  flex-direction: row;
  justify-content: space-around;
  
}

.w-height-vw {
  height: 100vh;
}

.w-util-pos {
  display: flex;
  width: fit-content;
  position: sticky;
  bottom: 20px;
  margin-left: auto;
  margin-right: 10px;
  margin-top: 40px;
}

.w-util-text-color-green {
  color: var(--main-light-accent-color) !important;
  font-size: 20px;
}

.w-util-change-size{
  width: fit-content;
  height: fit-content;
}

.w-util-change-size > a {
  color: var(--main-accent-color) !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  padding: 10px 0 !important;
}

.w-fw {
  font-weight: normal !important;
  font-size: 14px;
}

.w-flex {
  display: flex;
  justify-content: space-between;
  margin: 0 40px;
}

.w-flex  > p {
  font-weight: bold;
}

.w-padding {
  padding: 15px 17px !important;
}

.trip-info {
  display: flex;
  justify-content: space-between;
}

